fix song modal clipping song info

--- a/src/components/SongList/SongModal.scss
+++ b/src/components/SongList/SongModal.scss
@@ -197,10 +197,6 @@
     max-height: 430px;
   }
 
-  .song-info {
-    overflow: hidden;
-  }
-
   .related-songs {
     overflow: hidden;
     display: flex;
